# memtool

./: .gitignore  MCP_TEST_REPORT.md  OPTIMIZATION_SUGGESTIONS.md  PHASE1_SUMMARY.md  PHASE2_1_SUMMARY.md  PHASE2_DESIGN.md  PHASE2_SUMMARY.md  README.md  REVIEW_REPORT.md  mcp_server.py  memtool.py  memtool_core.py  memtool_lifecycle.py  memtool_rank.py  memtool_recommend.py  memtool_templates.yaml  memtool_web.py  optimization_report.md  phase2_2a_task.txt  pyproject.toml  refactor_prompt.md  review_prompt.txt  test_bugfixes.py  test_concurrency.py  test_metacognition.py  test_phase1.py  test_phase2.py  test_phase2_1.py  test_phase2_2a.py  test_vector.py  技术设计文档.md
docs/: PHASE2_2_CONTEXTUAL_MEMORY.md  PHASE2_2_CONTEXTUAL_MEMORY_v2.md  PHASE_2.5_DESIGN_v2.md  PHASE_2.6_DESIGN.md  PHASE_2.6_REVIEW.md
hooks/: memory_inject.py  post_tool_memory_capture.py  session_end_memory_summary.py  stop_memory_summary.py  utils.py
memtool/: __init__.py  history.py  merge.py  metacognition.py  observability.py  utils.py
memtool/context/: __init__.py  extractor.py
memtool/embedding/: __init__.py  embedder.py  semantic.py  vector_store.py
memtool/storage/: __init__.py  connection.py
scripts/: mcp_test_runner.py
static/css/: styles.css
static/js/: app.js  chart.umd.min.js
templates/: index.html
